# mlx-ocr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  ruff.toml
.agents/skills/mlx-ocr/: SKILL.md
.agents/skills/mlx4ocr/: SKILL.md
.github/workflows/: lint.yml  release.yml
benchmarks/: AGENTS.md  README.md  __init__.py  compare.py  requirements-mineru.txt  requirements-paddle.txt  run.py
benchmarks/common/: __init__.py  images.py  memory.py  runner_cli.py  types.py
benchmarks/runners/: __init__.py  _paddle.py  mineru_pipeline.py  mlx4ocr.py  mlx_ocr.py  paddle_cpu.py  paddle_onnx.py
docs/: roadmap.md
examples/: README.md  run_ocr.py
src/mlx4ocr/: AGENTS.md  __init__.py  cli.py  mcp.py  output.py  vlm.py
src/mlx4ocr/hub/: __init__.py  download.py  paddle_pretrained.py  rec_weight_patch.py  registry.py  weights.py
src/mlx4ocr/models/: __init__.py
src/mlx4ocr/models/common/: __init__.py  conv_bn.py  fuse.py  norm.py  rep_conv.py  se.py
src/mlx4ocr/models/det/: __init__.py  backbone.py  config.py  head.py  intracl.py  model.py  neck.py
src/mlx4ocr/models/rec/: __init__.py  backbone.py  config.py  encoder.py  head.py  model.py
src/mlx4ocr/pipeline/: __init__.py  config.py  crop.py  ocr.py
src/mlx4ocr/postprocess/: __init__.py  ctc.py  db.py
src/mlx4ocr/preprocess/: __init__.py
src/mlx_ocr/: AGENTS.md  __init__.py  cli.py  mcp.py  output.py  types.py  vlm.py
src/mlx_ocr/hub/: __init__.py  download.py  paddle_pretrained.py  rec_weight_patch.py  weights.py
src/mlx_ocr/models/: __init__.py
src/mlx_ocr/models/common/: __init__.py  activations.py  conv_bn.py  se.py
src/mlx_ocr/models/det/: __init__.py  backbone.py  config.py  head.py  intracl.py  model.py  neck.py
src/mlx_ocr/models/rec/: __init__.py  backbone.py  config.py  encoder.py  head.py  model.py
src/mlx_ocr/pipeline/: __init__.py  config.py  crop.py  memory.py  ocr.py
src/mlx_ocr/postprocess/: __init__.py  ctc.py  db.py
src/mlx_ocr/preprocess/: __init__.py  det.py  rec.py
tests/: AGENTS.md  __init__.py  conftest.py  test_benchmark_common.py  test_cli.py  test_common_weights.py  test_det_forward.py  test_det_postprocess.py  test_det_preprocess.py  test_examples.py  test_fast_ops.py  test_hub_registry.py  test_output.py  test_pipeline_e2e.py  test_pipeline_memory.py  test_rec_forward.py  test_rec_postprocess.py  test_rec_preprocess.py  test_rec_weight_patch.py  test_reference_infra.py  test_vlm.py
tests/data/golden/e2e/: medium.json  small.json  tiny.json
tests/reference/: README.md  __init__.py  compare.py
tests/reference/postprocess/: __init__.py  ctc_decode.py  db_postprocess.py
tests/reference/preprocess/: __init__.py  det_normalize.py  det_resize.py  rec_resize_norm.py
tests/scripts/: benchmark_pipeline.py  regen_golden.py
(+5 files in other folders)
