[project]
name = "mlx-ocr"
version = "0.1.0"
description = "MLX-based PP-OCRv6 inference on Apple Silicon"
readme = "README.md"
authors = [
    { name = "shuuul", email = "zetarylee@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["ocr", "mlx", "paddleocr", "pp-ocrv6", "apple-silicon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "huggingface-hub>=1.20.1",
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "opencv-python-headless>=4.8",
    "pyclipper>=1.3",
    "shapely>=2.0",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
