[project]
name = "mlx4ocr"
version = "0.1.1"
description = "MLX-based PP-OCRv6 inference on Apple Silicon"
readme = "README.md"
authors = [
    { name = "shuuul", email = "zetarylee@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ocr", "mlx", "paddleocr", "pp-ocrv6", "apple-silicon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "huggingface-hub>=1.20.1",
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.8",
    "pillow>=12.2.0",
    "pyclipper>=1.3",
    "pymupdf>=1.26.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.8.0",
    "shapely>=2.0",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/shuuul/mlx4ocr"
Repository = "https://github.com/shuuul/mlx4ocr"
Issues = "https://github.com/shuuul/mlx4ocr/issues"

[project.optional-dependencies]
mcp = [
    "mcp>=1.23.0",
]
vlm = [
    "mlx-vlm>=0.6.3",
]

[project.scripts]
mlx4ocr = "mlx_ocr.cli:main"
mlx4ocr-mcp = "mlx_ocr.mcp:main"

[dependency-groups]
dev = [
    "prek>=0.4.3",
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mlx_ocr"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
